fixes contrast error

--- a/lesson2/css/design-principles.scss
+++ b/lesson2/css/design-principles.scss
@@ -4,7 +4,7 @@ $main-font: 'Oswald', Arial, sans-serif;
 $secondary-font: 'Lora', Arial, serif;;
 $background-color: #f8f3eb;
 $primary-color: #c3edea;
-$accent-color: #fc7e2f;
+$accent-color: #8C3703;
 $backup-color: #f40552;
 
 h1, h2 { 
